Arreglando secciones con ondas

--- a/index.html
+++ b/index.html
@@ -369,8 +369,10 @@
       </div>
     </div>
   </div>
+  <!--
   <div class="ContinuacioncontenedorSection5">
   </div>
+   -->
 </div>
 
 
@@ -414,11 +416,13 @@
     </div>
   </div>
 </div>
-
+<!--  
+<div class="comtinuacionContenedor6">
+  <img src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/DesafioFlash/imgPlatagorma/Fondos/fondo_00azulOndaInferior.png" alt="">
+  </div>
+   -->
 <!-- Sección FAQ, septima sección -->
 <div id="section_7">
-  <div class="comtinuacionContenedor6">
-  </div>
   <div class="contenedorPreguntasFrecuentes">
     <div class="row">
       <div class="col-xs-12 col-md-12 text-center">
