Recupendo lo perdido

--- a/index.html
+++ b/index.html
@@ -233,6 +233,46 @@
     </div>
   </div>
 </div>
+<div class="row text-center contenedorCategoriasPrincipal">
+  <div class="contenedorCategorias">
+    <div class="categorias categoriaMonitoreo">
+      <img class="iconosCategorias" src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/DesafioFlash/imgPlatagorma/iconos/iconoRueda.png" alt="icono Rueda">
+      <p class="textoMayusculas textoCategorias">MONITOREO Y <br>PREDICCIÓN</p>
+    </div>
+    <p class="parrafoSeccion parrafoCategorias">Recolección, análisis y uso de información que guíe la toma de decisiones operativas sobre el Sistema Eléctrico Nacional.</p>
+  </div>
+  <div class="contenedorCategorias">
+    <div class="categorias categoriaPlanes">
+      <img class="iconosCategorias" src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/DesafioFlash/imgPlatagorma/iconos/iconoRuedaGota.png" alt="icono RuedaGota">
+      <p class="textoMayusculas textoCategorias">CONTINUIDAD OPERACIONAL</p>
+    </div>
+    <p class="parrafoSeccion parrafoCategorias">Herramientas de planificación y coordinación que facilite la ejecución de acciones dinámicas, rápidas y seguras en el Sistema Eléctrico Nacional.</p>
+  </div>
+  <div class="contenedorCategorias">
+    <div class="categorias categoriaModelo">
+      <img class="iconosCategorias" src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/DesafioFlash/imgPlatagorma/iconos/iconoCelular.png" alt="icono Celular">
+      <p class="textoMayusculas textoCategorias">MODELOS Y HERRAMIENTAS DE AUTOMATIZACIÓN</p>
+    </div>
+    <p class="parrafoSeccion parrafoCategorias">Uso, integración y estandarización de variables críticas para la operación, que permita optimizar y/o automatizar las maniobras de instalaciones y procesos operativos de los actores involucrados.</p>
+  </div>
+  <div class="contenedorCategorias">
+    <div class="categorias categoriaComunicación">
+      <img class="iconosCategorias" src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/DesafioFlash/imgPlatagorma/iconos/iconoTelefono.png" alt="icono Telefono">
+      <p class="textoMayusculas textoCategorias">COMUNICACIÓN Y SINERGIA DE ORGANISMOS</p>
+    </div>
+    <p class="parrafoSeccion parrafoCategorias">Interrelación entre organismos, empresas y consumidores de la industria energética, que permita velar por una gestión rápida, clara, oportuna y efectiva de la información crítica.</p>
+  </div>
+  <div class="contenedorCategorias">
+    <div class="categorias categoriaGestion">
+      <img class="iconosCategorias" src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/DesafioFlash/imgPlatagorma/iconos/iconoSenaletica.png" alt="icono Senaletica">
+      <p class="textoMayusculas textoCategorias">GESTIÓN DE <br>RIESGO</p>
+    </div>
+    <p class="parrafoSeccion parrafoCategorias">Prevención y mitigación de riesgos que aseguren un funcionamiento robusto y flexible de las instalaciones del sistema eléctrico, reduciendo su exposición y disminuyendo su vulnerabilidad.</p>
+  </div>
+</div>
+<div id="ciudad">
+  <img src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/DesafioFlash/imgPlatagorma/Fondos/Ciudad.png" alt="">
+</div>
 
 <!-- Sección etapas, cuarta sección -->
 <div id="section_4" class="editRow text-center">
