--- a/index.html
+++ b/index.html
@@ -35,10 +35,31 @@
       </div>
       <div class="row" id="desafioCerrado">
         <div class="col-xs-12 col-md-12 text-center ">
-          <p class=" titulos tituloSeccion1">Te informamos que el Buzón del Desafío Infinito cerró el viernes 13 de julio</p>
-          <p class="parrafoSeccion parrafoDesafioCerrado">Nos encontramos evaluando las ideas<br>¡Gracias por participar!</p>
-          <a class="btnParticipa btnTallerIdeacion" href="/ct/ct_list.bix?c=27E950E7-52E6-11E8-A70C-0AFFD6FE3BBA" target="_blank">REVISA AQUÍ LAS IDEAS</a>
-          <p class="parrafoSeccion desafioCerradoNota">*sólo para usuarios registrados</p>
+          <p class=" titulos">Muchas gracias a todos aquellos que participaron en el desafío</p>
+          <p class=" titulos tituloSeccion1">Felicitamos a las ideas finalistas</p>
+          <div class="row contenedorFinalistas">
+            <div class="col-xs-6 col-md-push-1 col-md-2 text-center ">
+              <p class="btnParticipa btnTallerIdeacion">NOMBRE IDEA</p>
+              <p>Nombres de los integrantes del equipo</p>
+            </div>
+            <div class="col-xs-6 col-md-push-1 col-md-2 text-center ">
+              <p class="btnParticipa btnTallerIdeacion">NOMBRE IDEA</p>
+              <p>Nombres de los integrantes del equipo</p>
+            </div>
+            <div class="col-xs-6 col-md-push-1 col-md-2 text-center ">
+              <p class="btnParticipa btnTallerIdeacion">NOMBRE IDEA</p>
+              <p>Nombres de los integrantes del equipo</p>
+            </div>
+            <div class="col-xs-6 col-md-push-1 col-md-2 text-center ">
+              <p class="btnParticipa btnTallerIdeacion">NOMBRE IDEA</p>
+              <p>Nombres de los integrantes del equipo</p>
+            </div>
+            <div class="col-xs-6 col-md-push-1 col-md-2 text-center ">
+              <p class="btnParticipa btnTallerIdeacion">NOMBRE IDEA</p>
+              <p>Nombres de los integrantes del equipo</p>
+            </div>
+          </div>
+          
         </div>
       </div>
       <div class="row">
