--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-12 " id="desafioCerrado">
-                <p class=" titulos">Muchas gracias a todos aquellos que participaron en el Desafío Infinito</p>
-                <p class=" titulos tituloSeccion1">Felicitamos a las ideas ganadoras</p>
-                <div class="row text-center">
-                    <div class="col-xs-12 col-md-4 ">
-                        <p class="titulosGanadore">Primer lugar</p>
-                        <img class="imgPrimerLugar" src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/demodayInfinito/006.png" alt="">
-                        <p class="nombreIdea"><strong>SHaDoW</strong></p>
-                        <p class="">Autor: Frontera Ingeniería.</p>
+                <p class=" titulos">¡Agradecemos a todos por su participación!</p>
+                <p class=" titulos tituloSeccion1">¡FELICITAMOS A LOS GANADORES DEL DESAFÍO INFINITO!</p>
+                <div class="row contenedorFinalistas">
+                    <div class="col-xs-12 col-md-6">
+                        <p class="nombreIdea"><img class="iconitoGanadores" src="https://d1dxeoyimx6ufk.cloudfront.net/uploads/NA5/OD7892/F69128B9.jpg" alt=""> 1<small class="lugarGanadores">er</small> lugar, SHaDoW.</p>
+                        <p class="autor">Autor: Frontera Ingeniería, Pablo Medina.</p>
+                        <p class="nombreIdea"><img class="iconitoGanadores" src="https://d1dxeoyimx6ufk.cloudfront.net/uploads/NA5/OD7892/F69128B9.jpg" width="25px" alt=""> 2<small class="lugarGanadores">do</small> Lugar,<br>Red de Comunicaciones Mesh inalámbrica, Robusta y Redundante</p>
+                        <p class="autor">Autor: CONECTA Ingeniería, Alfredo De La Quintana.</p>
+                        <p class="nombreIdea"><img class="iconitoGanadores" src="https://d1dxeoyimx6ufk.cloudfront.net/uploads/NA5/OD7892/F69128B9.jpg" width="25px" alt=""> 3<small class="lugarGanadores">er</small> Lugar,<br>Aplicación móvil para usuarios, que ayude a la detección de fallas y verificación del suministro</p>
+                        <p class="autor">Autores: Juan Pablo Maldonado, Ivonne Silva Oliva y Diego Sepúlveda Salazar.</p>
+                        <p class="nombreIdea"><img class="iconitoGanadores" src="https://d1dxeoyimx6ufk.cloudfront.net/uploads/NA5/OD7892/E994FA00.jpg" alt=""> Menciones Honrosas:</p>
+                        <p class="nombreIdea">"Faro Richter"</p>
+                        <p class="autor">Autor: Phineal Spa, Eduardo Soto.</p>
+                        <p class="nombreIdea">"Micropolos Energéticos Comunitarios"</p>
+                        <p class="autor">Autores: Maryorie Neto, Álvaro Ravazzano.</p>
                     </div>
-                    <div class="col-xs-12 col-md-4 ">
-                        <p class="titulosGanadore">Segundo lugar</p>
-                        <img class="imgSegundoLugar" src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/demodayInfinito/001.png" width="100%" alt="">
-                        <p class="nombreIdea"><strong>Red de Comunicaciones Mesh inalámbrica, Robusta y Redundante</strong></p>
-                        <p class="">Autor: CONECTA Ingeniería.</p>
-                    </div>
-                    <div class="col-xs-12 col-md-4 ">
-                        <p class="titulosGanadore">Tercer lugar</p>
-                        <img class="imgTercerLugar" src="https://d3jqq3cy6vtj1r.cloudfront.net/Coordinador/demodayInfinito/004.png" width="100%" alt="">
-                        <p class="nombreIdea"><strong>Aplicación móvil para usuarios, que ayude a la detección de fallas y verificación del suministro</strong></p>
-                        <p class="">Autores: Juan Pablo Maldonado<br>Ivonne Silva Oliva<br>Diego Sepúlveda Salazar</p>
+                    <div class="col-xs-12 col-md-6">
+                        <img class="imgDemo" src="https://d1dxeoyimx6ufk.cloudfront.net/uploads/NA5/OD7892/A2735271.jpg" alt="">
                     </div>
                 </div>
+                
+
             </div>
             <div class="row">
                 <div class=" col-xs-12 col-md-push-2 col-md-8">
